--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/camera": "4.3.3",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/facebook": "^4.5.3",
     "@ionic-native/file": "latest",
     "@ionic-native/file-chooser": "^4.5.3",
     "@ionic-native/file-transfer": "^4.5.3",
@@ -32,6 +33,7 @@
     "@ngx-translate/http-loader": "^2.0.0",
     "cordova-android": "7.0.0",
     "cordova-plugin-device": "^2.0.1",
+    "cordova-plugin-facebook4": "^1.9.1",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-filechooser": "^1.0.1",
@@ -58,7 +60,11 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-filechooser": {}
+      "cordova-plugin-filechooser": {},
+      "cordova-plugin-facebook4": {
+        "APP_ID": "com.ionicfacebook",
+        "APP_NAME": "Test"
+      }
     },
     "platforms": [
       "android"
