testing facebook lg

--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-filechooser": {},
       "cordova-plugin-facebook4": {
-        "APP_ID": "com.ionicfacebook",
+        "APP_ID": "163910924392382",
         "APP_NAME": "Test"
       }
     },
