--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
+    "@ionic-native/call-number": "^4.5.3",
     "@ionic-native/camera": "4.3.3",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/facebook": "^4.5.3",
@@ -31,6 +32,7 @@
     "@ionic/storage": "2.1.3",
     "@ngx-translate/core": "8.0.0",
     "@ngx-translate/http-loader": "^2.0.0",
+    "call-number": "^1.0.1",
     "cordova-android": "7.0.0",
     "cordova-ios": "^4.5.4",
     "cordova-plugin-device": "^2.0.1",
@@ -65,7 +67,8 @@
       "cordova-plugin-facebook4": {
         "APP_ID": "163910924392382",
         "APP_NAME": "Test"
-      }
+      },
+      "mx.ferreyra.callnumber": {}
     },
     "platforms": [
       "android",
