--- a/package.json
+++ b/package.json
@@ -66,8 +66,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-filechooser": {},
       "cordova-plugin-facebook4": {
-        "APP_ID": "163910924392382",
-        "APP_NAME": "Test"
+        "APP_ID": "355328341635149",
+        "APP_NAME": "lostnfound"
       },
       "mx.ferreyra.callnumber": {}
     },
