--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova.plugins.diagnostic": "^4.0.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "mx.ferreyra.callnumber": "~0.0.2",
@@ -69,7 +70,8 @@
         "APP_ID": "355328341635149",
         "APP_NAME": "lostnfound"
       },
-      "mx.ferreyra.callnumber": {}
+      "mx.ferreyra.callnumber": {},
+      "cordova.plugins.diagnostic": {}
     },
     "platforms": [
       "android",
